@@ -6,6 +6,8 @@ cdbs (0.4.57) UNRELEASED; urgency=low
     means keep old versioned depenencies for Perl, relax them a bit for
     Python, but drop them for old versions of debhelper, gnulib,
     type-handling, cdbs and patchutils).
+  * Adjust gnome.mk to extend build-dependencies after including classes
+    which initialize them.
 
  -- Jonas Smedegaard <dr@jones.dk>  Fri, 10 Apr 2009 11:58:37 +0200
 
